[package]
name = "pong"
version = "0.1.0"
authors = ["juanvallejo <jvallejo@redhat.com>"]

[dependencies]
piston = "0.37.0"
piston2d-graphics = "0.26.0"
piston2d-opengl_graphics = "0.53.0"
piston_window = "0.80.0"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/PistonDevelopers/sdl2_window"
